<resources>
    <string name="app_name">VinsolAssignment</string>
    <string name="schedule_company_meeting">Schedule Company Meeting</string>
    <string name="next">NEXT</string>
    <string name="prev">PREV</string>
    <string name="schedule_a_meeting">Schedule A Meeting</string>
    <string name="back">BACK</string>
    <string name="meeting_date">Meeting Date</string>
    <string name="note">Description</string>
    <string name="submit">Submit</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
</resources>
