<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.example.vinsolassignment.ui.schedule.ScheduleViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:minHeight="40dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp">

            <TextView
                android:id="@+id/prev_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:drawableStart="@drawable/ic_prev"
                android:drawableLeft="@drawable/ic_prev"
                android:drawablePadding="4dp"
                android:onClick="@{()->viewModel.previousDaySchedule()}"
                android:text="@string/prev"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/date_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:onClick="@{()->viewModel.openDatePicker()}"
                android:text="@{viewModel.dateToShow}"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/next_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:drawableEnd="@drawable/ic_next"
                android:drawableRight="@drawable/ic_next"
                android:drawablePadding="4dp"
                android:onClick="@{()->viewModel.getNextDaySchedule()}"
                android:text="@string/next"
                android:textColor="@android:color/white" />
        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/scheduleRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/schedule_meeting_btn"
            android:layout_below="@id/header"
            app:adapter="@{viewModel.scheduleListLiveData}"
            tools:listitem="@layout/schedule_adapter_item" />

        <Button
            android:id="@+id/schedule_meeting_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/rounded_corner_bg"
            android:onClick="@{()->viewModel.scheduleMeeting()}"
            android:text="@string/schedule_company_meeting"
            android:textColor="@android:color/white" />

        <androidx.core.widget.ContentLoadingProgressBar
            android:id="@+id/address_looking_up"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:visibility="@{viewModel.isLoading ? View.VISIBLE : View.GONE}" />

    </RelativeLayout>
</layout>